fix(DittoEventManagement): fix bugs